migrator-tests/src/snapshots/migrator_tests__source_generate::should_panic_if_same_field_renaming_twice::{{closure}}__two_way___strictsingle field name change strategy: renamedb_state_2.snap
---
source: migrator-tests/src/lib.rs
expression: db_miration_schema_state
---
DbMigrationSchemaState {
    resources: DbInfo {
        analyzers: Analyzers(
            Info(
                {},
            ),
        ),
        functions: Functions(
            Info(
                {},
            ),
        ),
        params: Params(
            Info(
                {},
            ),
        ),
        scopes: Scopes(
            Info(
                {},
            ),
        ),
        tables: Tables(
            Info(
                {
                    "animal": DefineStatementRaw(
                        "DEFINE TABLE animal SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "crop": DefineStatementRaw(
                        "DEFINE TABLE crop SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "eats_v2": DefineStatementRaw(
                        "DEFINE TABLE eats_v2 SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "migration": DefineStatementRaw(
                        "DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "new_stuff": DefineStatementRaw(
                        "DEFINE TABLE new_stuff SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "planet": DefineStatementRaw(
                        "DEFINE TABLE planet SCHEMAFULL PERMISSIONS NONE",
                    ),
                },
            ),
        ),
        tokens: Tokens(
            Info(
                {},
            ),
        ),
        users: Users(
            Info(
                {},
            ),
        ),
    },
    migration_meta: [
        StreamLinedMigration {
            basename: Basename(
                "migration_2_gen",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "7e8893918909d1d527bc7a6a279a95d1703e445e0cde90e8082ed4fd9ced0dbf",
            ),
            checksum_down: Some(
                Checksum(
                    "3c181ebdca7900fc67015a028a1c04cbc47ee88cd90baf1f5238cac2e0b7e95e",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "b7a5b1e2b57e959dc5a41f74fe98b382d31c4e181acaefb80c630d80c921024f",
            ),
            checksum_down: Some(
                Checksum(
                    "1297b3600eaa5bf46b7cb0f2ef0ec816f722f2aac01dee04e648ec8533a3884d",
                ),
            ),
        },
    ],
}
